--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,9 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+.idea/libraries/lib.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/projet24_jfx_2020_2021.iml
+.idea/vcs.xml
+.idea/workspace.xml
